--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-            
-    
-    <wb-module deploy-name="kenshuProject1">
-                        
         
+    <wb-module deploy-name="kenshuProject">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-                        
-        
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-                        
-        
-        <property name="java-output-path" value="/kenshuProject1/build/classes"/>
-        <property name="context-root" value="kenshuProject1"/>
-                    
-    
+                
+        <property name="java-output-path" value="/kenshuProject/build/classes"/>
+        <property name="context-root" value="kenshuProject"/>
+            
     </wb-module>
-        
-
+    
 </project-modules>
